subprojects/pclc/test/errors/redefinition.pcl
// RUN: not pclc %s

a = func (x, y): foo {
  print 1;
}

b = func (z): foo {
  print 2;
}
